project section content overflow-fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -655,7 +655,7 @@ span {
     border-radius: 0.5rem;
     font-size: 1.5rem;
     height: 4.5rem;
-    margin: 4rem 0;
+    margin: 3.5rem 0;
     background-color: black;
     color: white;
     box-shadow: 5px 5px 12px -1px #202020;
